# quantum-emulator

./: .gitignore  CMakeLists.txt  README.md
bindings/: py_bindings.cpp
python/: quantum.py
src/: circuit.cpp  circuit.h  gate.cpp  gate.h  qubit.cpp  qubit.h  simulator.cpp  simulator.h
